--- a/.github/workflows/lede-tagSL-builder-autoSLsystem.yml
+++ b/.github/workflows/lede-tagSL-builder-autoSLsystem.yml
@@ -49,14 +49,14 @@ env:
 jobs:
    run-ubuntu:
     runs-on: ubuntu-22.04
-    if: tagSL == 'master' || tagSL == '20230609' || tagSL == '20221001' || tagSL == '20220716' || tagSL == '20220505' || tagSL == '20220401' 
+    if: inputs.tagSL == 'master' || inputs.tagSL == '20230609' || inputs.tagSL == '20221001' || inputs.tagSL == '20220716' || inputs.tagSL == '20220505' || inputs.tagSL == '20220401' 
     steps:
      - name: Run Ubuntu Task
        run: echo "你选择的版本是 ${{inputs.tagSL}},配合这个版本的编译系统版本是ubuntu-22.04"
    
    run-ubuntu1:
     runs-on: ubuntu-20.04
-    if: tagSL == '20211117' || tagSL == '20200915' || tagSL == '20200416' || tagSL == '20200408' 
+    if: inputs.tagSL == '20211117' || inputs.tagSL == '20200915' || inputs.tagSL == '20200416' || inputs.tagSL == '20200408' 
     steps:
      - name: Run Ubuntu1 Task
        run: echo "你选择的版本是 ${{inputs.tagSL}},配合这个版本的编译系统版本是ubuntu-20.04"
